--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         }
     ],
     "require": {
-      "ext-mbstring": "*"
+      "ext-mbstring": "*",
+        "kub-at/php-simple-html-dom-parser": "^1.9"
     }
 }
