Apply new exception management.

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     ],
     "require": {
       "ext-mbstring": "*",
-        "kub-at/php-simple-html-dom-parser": "^1.9"
+        "kub-at/php-simple-html-dom-parser": "^1.9",
+        "mggflow/exception-manager": "^2.0"
     }
 }
